# opinionated

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  MAINFEST.in  MANIFEST.in  README.md  README.rst  build_example_plots.ipynb  citation.cff  cleaned_build_example_plots.ipynb  latest_python_build_example_plots.ipynb  opinionated_trial_notebook.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
opinionated/: __init__.py  core.py
opinionated/data/: __init__.py  opinionated_j.mplstyle  opinionated_sg.mplstyle  opinionated_tw.mplstyle  opinions.mplstyle  opinions_rc.mplstyle  opinions_space_mono.mplstyle
src/opinionated/: __init__.py  core.py  utils.py
src/opinionated/notebooks/: build_example_plots.ipynb  cleaned_build_example_plots.ipynb  latest_python_build_example_plots.ipynb  opinionated_trial_notebook.ipynb
src/opinionated/stylefiles/: minimal.mplstyle  opinionated_fsc.mplstyle  opinionated_m.mplstyle  opinionated_min.mplstyle  opinions.mplstyle
stylefiles/: opinionated_minimal.mplstyle
tests/: conftest.py
