[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opinionated"
version = "0.0.1"
description = "Opinionated provides simple, clean stylesheets for plotting with matplotlib and seaborn."
authors = ["Maximilian Noichl <noichlmax@hotmail.co.uk>"]
license = "MIT"
readme = "README.md"  # Replace with the path to your README file if it's not README.md

[tool.poetry.dependencies]
python = ">=3.7,<11"
matplotlib = "*"
seaborn = "*"
requests = "*"
ipython = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[tool.poetry.package_data]
opinionated = ["data/*.mplstyle"]

[tool.poetry.build]
include = ["data/*.mplstyle"]  # Optional: Include additional files in the package

[[tool.poetry.source]]
name = "legacy"
url = "https://pypi.org/simple"
secondary = true
