[metadata]
name = opinionated
url = https://github.com/MNoichl/opinionated
license = MIT
author = Maximilian Noichl
author_email = noichlmax@hotmail.co.uk
description = Add-on for Matplotlib to produce pretty hrbrtheme-like-plots plots

[options]
packages = opinionated
install_requires =
    matplotlib
    seaborn

[options.package_data]
opinionated = data/*.mplstyle