[metadata]
name = opinionated
url = https://github.com/MNoichl/opinionated
license = MIT
author = Maximilian Noichl
author_email = noichlmax@hotmail.co.uk
description = Add-on for Matplotlib to produce pretty hrbrtheme-like-plots plots

[options]
packages = opinionated
install_requires =
    matplotlib
    seaborn
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6

[options.package_data]
opinionated = data/*.mplstyle