[metadata]
name = opinionated
url = https://github.com/MNoichl/opinionated
license = MIT
author = Maximilian Noichl
author_email = noichlmax@hotmail.co.uk
description = Add-on for Matplotlib to produce pretty hrbrtheme-like-plots plots


[options]
zip_safe = False
include_package_data = True
packages = opinionated
python_requires = >=3.7
install_requires =
    matplotlib
    seaborn
    requests
    ipython

[options.package_data]
opinionated = data/*.mplstyle